# fastapi_project

./: items_views.py  main.py  pyproject.toml
core/: config.py
core/models/: __init__.py  db_helper.py
models/: __init__.py
users/: crud.py  schemas.py  views.py
