[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Yuliia Shaposhnikova <domik339@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
